--- a/xinjian/Makefile
+++ b/xinjian/Makefile
@@ -1,6 +1,6 @@
 #this is for chess
 
-str=main.c init.c basic_shape.c print_board.c mouse_op.c
+str=main.c init.c basic_shape.c print_board.c mouse_op.c chess_op.c
 para=-o main -Wall
 main:$(str)
 	gcc $(str) $(para)
